# skills

.github/workflows/: release.yml
general-coding-principles/: SKILL.md
general-coding-rules/: SKILL.md
skill-manager/: Cargo.toml
skill-manager/src/: main.rs
