[package]
name = "skill-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
anyhow = "1.0"
directories = "5.0"
walkdir = "2.4"
git2 = { version = "0.18", default-features = false } # Use git2 for git operations if needed, or just Command
